--- a/app.json
+++ b/app.json
@@ -5,13 +5,18 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "login1",
+    "scheme": "login2",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.reactnativelogin2.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
+      "package": "com.reactnativelogin2.app",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -38,11 +43,23 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "@react-native-google-signin/google-signin",{
+          "iosClientId": "471752240657-up7ek18rni69olkqs1qia41687ungk7v.apps.googleusercontent.com",
+          "iosUrlScheme": "com.googleusercontent.apps.471752240657-up7ek18rni69olkqs1qia41687ungk7v"
+        }
       ]
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "348ee843-97c9-4928-86c2-44c21eb90657"
+      }
     }
   }
 }
